--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Tektur', Arial, sans-serif;
+  font-family: 'Lato', Arial, sans-serif;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
