--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -156,7 +156,7 @@ img{max-width:100%;display:block}
 /* Filled hero header */
 .hero.hero-filled{
   position:relative;
-  min-height:100vh;
+  min-height:calc(90vh - 108px);
   background-size:cover;
   background-position:center;
   background-repeat:no-repeat;
